setup translate route

--- a/src/app/public/containers/home/home.component.html
+++ b/src/app/public/containers/home/home.component.html
@@ -1,20 +1,20 @@
-
 <section>
   <div class="row">
     <div class="col-sm-12">
       <h1 class="h1">
-        The assignment by EightCap
+        {{ 'The assignment by EightCap' | translate }}
       </h1>
       <div>
-        <h2 class="h2">Create an application that has </h2>
+        <h2 class="h2">{{'Create an application that has' | translate}} </h2>
         <ul class="list-group">
-          <li class="list-group-item">An introduction page as a landing page, you can use https://lipsum.com/ to
-            generate the paragraphs</li>
-          <li class="list-group-item">Has a child page "about", you can use the same 3rd party service generate
-            paragraphs</li>
-          <li class="list-group-item">Make sure the child page is lazy loaded</li>
-          <li class="list-group-item">Has a language selector which should be visible on every page and should have at
-            least 3 languages available</li>
+          <li class="list-group-item">{{'An introduction page as a landing page, you can use https://lipsum.com/ to
+            generate the paragraphs' | translate}}</li>
+          <li class="list-group-item">
+            {{'Has a child page "about", you can use the same 3rd party service generate paragraphs' | translate}}</li>
+          <li class="list-group-item">{{'Make sure the child page is lazy loaded' | translate}}</li>
+          <li class="list-group-item">
+            {{'Has a language selector which should be visible on every page and should have at least 3 languages available' | translate}}
+          </li>
         </ul>
       </div>
     </div>
