- Update language selector - Update language file

--- a/src/app/public/containers/about/about.component.html
+++ b/src/app/public/containers/about/about.component.html
@@ -1,3 +1,18 @@
-<h1>
-    About component
+<h1 class="h1">
+  {{ "about.title" | translate }}
 </h1>
+<p class="lead">
+  {{ "about.line1" | translate }}
+</p>
+<p class="lead">
+  {{ "about.line2" | translate }}
+</p>
+<p class="lead">
+  {{ "about.line3" | translate }}
+</p>
+<p class="lead">
+  {{ "about.line4" | translate }}
+</p>
+<p class="lead">
+  {{ "about.line5" | translate }}
+</p>
