--- a/src/app/public/containers/home/home.component.html
+++ b/src/app/public/containers/home/home.component.html
@@ -2,18 +2,18 @@
   <div class="row">
     <div class="col-sm-12">
       <h1 class="h1">
-        {{ 'The assignment by EightCap' | translate }}
+        {{ "home.title" | translate }}
       </h1>
       <div>
-        <h2 class="h2">{{'Create an application that has' | translate}} </h2>
+        <h2 class="h2">{{ "home.text1" | translate }}</h2>
         <ul class="list-group">
-          <li class="list-group-item">{{'An introduction page as a landing page, you can use https://lipsum.com/ to
-            generate the paragraphs' | translate}}</li>
+          <li class="list-group-item">{{ "home.text2" | translate }}</li>
           <li class="list-group-item">
-            {{'Has a child page "about", you can use the same 3rd party service generate paragraphs' | translate}}</li>
-          <li class="list-group-item">{{'Make sure the child page is lazy loaded' | translate}}</li>
+            {{ "home.text3" | translate }}
+          </li>
+          <li class="list-group-item">{{ "home.text4" | translate }}</li>
           <li class="list-group-item">
-            {{'Has a language selector which should be visible on every page and should have at least 3 languages available' | translate}}
+            {{ "home.text5" | translate }}
           </li>
         </ul>
       </div>
