--- a/src/app/public/containers/layout/layout.component.html
+++ b/src/app/public/containers/layout/layout.component.html
@@ -1,6 +1,5 @@
-<header class="container">
-  <app-language></app-language>
-</header>
+
+<app-public-navigator></app-public-navigator>
 <main class="container">
   <router-outlet></router-outlet>
 </main>
