--- a/src/app/shared/components/language/language.component.scss
+++ b/src/app/shared/components/language/language.component.scss
@@ -1,11 +1,21 @@
 .language-selector {
-  margin-top: -7px;
   list-style: none;
+  cursor: pointer;
 }
 
-.language-selector>.dropdown-toggle {
+@media (max-width: 768px) {
+  .language-selector {
+    margin-left: 10px;
+  }
+  .dropdown-menu.pull-right {
+    border-radius: 4px;
+    float: none !important;
+  }
+}
+
+.language-selector > .dropdown-toggle {
   display: inline-block;
-  padding: 7px 12px;
+  padding: 9px 12px;
   -webkit-border-radius: 3px;
   -webkit-background-clip: padding-box;
   -moz-border-radius: 3px;
@@ -14,12 +24,12 @@
   background-clip: padding-box;
 }
 
-.language-selector>.dropdown-toggle img {
+.language-selector > .dropdown-toggle img {
   display: inline-block;
   line-height: 1;
 }
 
-.language-selector.open>.dropdown-toggle {
+.language-selector.open > .dropdown-toggle {
   background: #f5f5f6;
 }
 
@@ -45,14 +55,14 @@
   -moz-background-clip: padding;
   border-radius: 3px 0 3px 3px;
   background-clip: padding-box;
-  margin-right: 5px;
+  margin-right: 0px;
 }
 
-.language-selector .dropdown-menu>li {
+.language-selector .dropdown-menu > li {
   border-bottom: 1px solid #ebebeb;
 }
 
-.language-selector .dropdown-menu>li a {
+.language-selector .dropdown-menu > li a {
   margin: 0;
   display: block;
   -webkit-border-radius: 0;
@@ -69,24 +79,24 @@
   transition: all 300ms ease-in-out;
 }
 
-.language-selector .dropdown-menu>li a img {
+.language-selector .dropdown-menu > li a img {
   margin-right: 5px;
 }
 
-.language-selector .dropdown-menu>li a:hover {
+.language-selector .dropdown-menu > li a:hover {
   background: rgba(235, 235, 235, 0.4);
 }
 
-.language-selector .dropdown-menu>li:last-child {
+.language-selector .dropdown-menu > li:last-child {
   border-bottom: 0;
 }
 
-.language-selector .dropdown-menu>li.active a {
+.language-selector .dropdown-menu > li.active a {
   background: rgba(235, 235, 235, 0.9);
   color: #737881;
 }
 
-.language-selector.open>.dropdown-toggle {
+.language-selector.open > .dropdown-toggle {
   -webkit-border-radius: 3px 3px 0 0;
   -webkit-background-clip: padding-box;
   -moz-border-radius: 3px 3px 0 0;
