--- a/src/app/shared/components/language/language.component.html
+++ b/src/app/shared/components/language/language.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown language-selector">
   <a class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
-    <img src="assets/images/flag-{{selectedLanguage.key}}.png" />
+    <img src="assets/images/flag-{{selectedLanguage?.key}}.png" />
   </a>
   <ul class="dropdown-menu pull-right">
     <li *ngFor="let item of langagues">
