--- a/src/app/shared/components/language/language.component.scss
+++ b/src/app/shared/components/language/language.component.scss
@@ -1,106 +1,93 @@
 .language-selector {
   list-style: none;
   cursor: pointer;
+
 }
 
 @media (max-width: 768px) {
   .language-selector {
     margin-left: 10px;
   }
+
   .dropdown-menu.pull-right {
     border-radius: 4px;
     float: none !important;
   }
 }
 
-.language-selector > .dropdown-toggle {
-  display: inline-block;
-  padding: 9px 12px;
-  -webkit-border-radius: 3px;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 3px;
-  -moz-background-clip: padding;
-  border-radius: 3px;
-  background-clip: padding-box;
+.language-selector {
+  .dropdown-toggle {
+    display: inline-block;
+    padding: 9px 12px;
+    border-radius: 3px;
+    background-clip: padding-box;
+  }
+
+  .dropdown-toggle img {
+    display: inline-block;
+    line-height: 1;
+  }
+
+  &.open {
+    .dropdown-toggle {
+      background: #f5f5f6;
+      border-radius: 3px 3px 0 0;
+      background-clip: padding-box;
+    }
+  }
+
+  .dropdown-menu {
+    background: #f5f5f6;
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    overflow: hidden;
+    border-radius: 0 3px 3px 3px;
+    background-clip: padding-box;
+  }
+
+  .dropdown-menu.pull-right {
+    border-radius: 3px 0 3px 3px;
+    background-clip: padding-box;
+    margin-right: 0px;
+  }
+
+  .language-selector .dropdown-menu>li {
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  .dropdown-menu {
+    li {
+      a {
+        margin: 0;
+        display: block;
+        border-radius: 0;
+        background-clip: padding-box;
+        padding: 10px 20px;
+        color: #8d929a;
+        transition: all 300ms ease-in-out;
+
+        img {
+          margin-right: 10px;
+        }
+
+        &:hover {
+          background: rgba(235, 235, 235, 0.4);
+        }
+      }
+
+      &:last-child {
+        border-bottom: 0;
+      }
+
+      &.active {
+        a {
+          background: rgba(235, 235, 235, 0.9);
+          color: #737881;
+        }
+      }
+    }
+  }
 }
 
-.language-selector > .dropdown-toggle img {
-  display: inline-block;
-  line-height: 1;
-}
-
-.language-selector.open > .dropdown-toggle {
-  background: #f5f5f6;
-}
-
-.language-selector .dropdown-menu {
-  background: #f5f5f6;
-  border: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  overflow: hidden;
-  -webkit-border-radius: 0 3px 3px 3px;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 0 3px 3px 3px;
-  -moz-background-clip: padding;
-  border-radius: 0 3px 3px 3px;
-  background-clip: padding-box;
-}
-
-.language-selector .dropdown-menu.pull-right {
-  -webkit-border-radius: 3px 0 3px 3px;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 3px 0 3px 3px;
-  -moz-background-clip: padding;
-  border-radius: 3px 0 3px 3px;
-  background-clip: padding-box;
-  margin-right: 0px;
-}
-
-.language-selector .dropdown-menu > li {
-  border-bottom: 1px solid #ebebeb;
-}
-
-.language-selector .dropdown-menu > li a {
-  margin: 0;
-  display: block;
-  -webkit-border-radius: 0;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 0;
-  -moz-background-clip: padding;
-  border-radius: 0;
-  background-clip: padding-box;
-  padding: 10px 20px;
-  color: #8d929a;
-  -webkit-transition: all 300ms ease-in-out;
-  -moz-transition: all 300ms ease-in-out;
-  -o-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.language-selector .dropdown-menu > li a img {
-  margin-right: 5px;
-}
-
-.language-selector .dropdown-menu > li a:hover {
-  background: rgba(235, 235, 235, 0.4);
-}
-
-.language-selector .dropdown-menu > li:last-child {
-  border-bottom: 0;
-}
-
-.language-selector .dropdown-menu > li.active a {
-  background: rgba(235, 235, 235, 0.9);
-  color: #737881;
-}
-
-.language-selector.open > .dropdown-toggle {
-  -webkit-border-radius: 3px 3px 0 0;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 3px 3px 0 0;
-  -moz-background-clip: padding;
-  border-radius: 3px 3px 0 0;
-  background-clip: padding-box;
-}
