load translate for each module

--- a/src/app/public/containers/about/about.component.html
+++ b/src/app/public/containers/about/about.component.html
@@ -1,18 +1,18 @@
 <h1 class="h1">
-  {{ "about.title" | translate }}
+  {{ "public.about.title" | translate }}
 </h1>
 <p class="lead">
-  {{ "about.line1" | translate }}
+  {{ "public.about.line1" | translate }}
 </p>
 <p class="lead">
-  {{ "about.line2" | translate }}
+  {{ "public.about.line2" | translate }}
 </p>
 <p class="lead">
-  {{ "about.line3" | translate }}
+  {{ "public.about.line3" | translate }}
 </p>
 <p class="lead">
-  {{ "about.line4" | translate }}
+  {{ "public.about.line4" | translate }}
 </p>
 <p class="lead">
-  {{ "about.line5" | translate }}
+  {{ "public.about.line5" | translate }}
 </p>
