--- a/src/app/public/containers/home/home.component.html
+++ b/src/app/public/containers/home/home.component.html
@@ -2,18 +2,18 @@
   <div class="row">
     <div class="col-sm-12">
       <h1 class="h1">
-        {{ "home.title" | translate }}
+        {{ "public.home.title" | translate }}
       </h1>
       <div>
-        <h2 class="h2">{{ "home.text1" | translate }}</h2>
+        <h2 class="h2">{{ "public.home.text1" | translate }}</h2>
         <ul class="list-group">
-          <li class="list-group-item">{{ "home.text2" | translate }}</li>
+          <li class="list-group-item">{{ "public.home.text2" | translate }}</li>
           <li class="list-group-item">
-            {{ "home.text3" | translate }}
+            {{ "public.home.text3" | translate }}
           </li>
-          <li class="list-group-item">{{ "home.text4" | translate }}</li>
+          <li class="list-group-item">{{ "public.home.text4" | translate }}</li>
           <li class="list-group-item">
-            {{ "home.text5" | translate }}
+            {{ "public.home.text5" | translate }}
           </li>
         </ul>
       </div>
