--- a/src/app/public/containers/layout/layout.component.html
+++ b/src/app/public/containers/layout/layout.component.html
@@ -1,5 +1,7 @@
-
-<app-public-navigator></app-public-navigator>
-<main class="container">
-  <router-outlet></router-outlet>
-</main>
+<div class="container">
+  <p class="h1">{{'title' | translate}}</p>
+  <app-public-navigator></app-public-navigator>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
