--- a/src/app/public/components/navigator/navigator.component.html
+++ b/src/app/public/components/navigator/navigator.component.html
@@ -6,7 +6,7 @@
           [routerLink]="['/']"
           [routerLinkActive]="['active']"
           [routerLinkActiveOptions]="{ exact: true }"
-          >{{ "Home" | translate }}</a
+          >{{ "menu.Home" | translate }}</a
         >
       </li>
       <li>
@@ -14,7 +14,7 @@
           [routerLink]="['about']"
           [routerLinkActive]="['active']"
           [routerLinkActiveOptions]="{ exact: true }"
-          >{{ "About" | translate }}</a
+          >{{ "menu.About" | translate }}</a
         >
       </li>
       <li>
@@ -22,7 +22,7 @@
           [routerLink]="['admin']"
           [routerLinkActive]="['admin']"
           [routerLinkActiveOptions]="{ exact: true }"
-          >{{ "Admin" | translate }}</a
+          >{{ "menu.Admin" | translate }}</a
         >
       </li>
       <li class="language">
