--- a/src/app/admin/containers/dashboard/dashboard.component.html
+++ b/src/app/admin/containers/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<h2>Dash board page</h2>
+<h2>{{"admin.dashboard.title" | translate}}</h2>
+<p>
+  Translate text: {{"admin.text" | translate}}
+</p>
+
+<p>{{"menu.Home" | translate}}</p>
