--- a/src/app/admin/containers/layout/layout.component.html
+++ b/src/app/admin/containers/layout/layout.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="container">
+  <div class="row">
+    <div class="col-12 pull-right">
+      <app-language></app-language>
+    </div>
+  </div>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
